--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-__pycache__
-.vscode
+/HW12/__pycache__
+/HW13/__pycache__
+/HW13/Data_Manager/__pycache__
+/HW13/Data_Manager/data_manager/__pycache__
