playing with ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/HW12/__pycache__
-/HW13/__pycache__
-/HW13/Data_Manager/__pycache__
+/HW12/weather_project/__pycache__
+/HW12/weather_project/tests/__pycache__
+/HW12/weather_project/tests/.pytest_cache
 /HW13/Data_Manager/data_manager/__pycache__
