--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /HW12/weather_project/tests/__pycache__
 /HW12/weather_project/tests/.pytest_cache
 /HW13/Data_Manager/data_manager/__pycache__
+__pycache__
