--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+media
+.media
+*media
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
